# BitstreamEvolutionPico

./: .gitmodules  Makefile  README.md
exampleProjectsC/: README.md
exampleProjectsC/bitstream_over_usb/: bitstream_transfer_test.py  main.cpp
exampleProjectsC/cram_config/: CMakeLists.txt  main.cpp
exampleProjectsC/cram_flash_benchmark/: CMakeLists.txt  README.md  main.cpp  pico-ice-sdk  pico_ice.pcf  top.v
exampleProjectsC/ice_flash_time_benchmark/: CMakeLists.txt  main.cpp  pico-sdk  pico2_ice.pcf  pico_ice.pcf  top.v
exampleProjectsC/rp2_hello_world/: CMakeLists.txt  README.md  bin2header.py  main.c  pico_ice.pcf  top.v
exampleProjectsC/rp2_ice_bram_controller/: CMakeLists.txt  README.md  main.c  pico-ice-sdk  terminal.py
exampleProjectsC/rp2_ice_echo/: CMakeLists.txt  main.c  pico-ice-sdk  pico-sdk  pico2_ice.pcf  terminal.py
exampleProjectsC/write_time_benchmark_LEDS/: README.md  led_helpers.cpp  main.cpp  top.v
exampleProjectsMicropython/: README.md  blink.py  pico1_ice_firmware_v_1_1_3.uf2
exampleProjectsMicropython/USB_file_transfer/: boot.py  main.py
exampleProjectsMicropython/bitstream_to_CRAM/: main.py
exampleProjectsMicropython/multi_bitstream_benchmark/: README.md  main.py  upload.sh  upload_cp.sh
firmwareMicropython/: .gitignore  .gitmodules  README.md  pico2_ice_firmware_v_1_1_3.uf2
firmwareMicropython/boards/PICO_ICE/: CMakeLists.txt  mpconfigboard.cmake  mpconfigboard.h
firmwareMicropython/boards/PICO_ICE/modules/: boot.py
